# semuatrack

./: .env  Cargo.toml
migrations/2022-07-14-155129_wallet/: down.sql  up.sql
migrations/2023-04-14-000000_account/: down.sql  up.sql
migrations/2023-04-14-000001_category/: up.sql
migrations/2023-04-14-000002_transaction/: down.sql  up.sql
migrations/2023-04-14-000003_label/: down.sql  up.sql
migrations/2023-04-14-000004_transaction_label/: down.sql  up.sql
src/: actions.rs  cashflow.rs  category.rs  main.rs  models.rs  schema.rs
static/js/: cashflow.js  transaction.js
templates/: base.html.tera  cashflow.html.tera  index.html.tera  transaction.html.tera
