[package]
name = "testaa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
dotenv = "0.15" 
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "numeric"] }
serde = { version = "1.0", features = ["derive"] }
bigdecimal = { version = "0.3.0", features = ["serde"] }
